--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.Calendar" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
@@ -13,4 +13,42 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="EditPlan" parent="Theme.Calendar">
+
+    </style>
+
+    <style name="EditPlan.Label">
+        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="EditPlan.Edit">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="EditPlan.Edit.DateTime">
+        <item name="android:inputType">datetime</item>
+    </style>
+
+    <style name="EditPlan.Edit.SingleLine">
+        <item name="android:inputType">text</item>
+    </style>
+
+    <style name="EditPlan.Edit.MultiLine">
+        <item name="android:inputType">textMultiLine</item>
+    </style>
+
+    <style name="OKButton" parent="Theme.Calendar">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:text">@android:string/ok</item>
+    </style>
+
 </resources>
