Fix to use LocalDate, LocalTime and LocalDateTime

--- a/app/src/main/res/layout/item_date.xml
+++ b/app/src/main/res/layout/item_date.xml
@@ -32,13 +32,15 @@
             android:includeFontPadding="false"
             android:text="@{item.dayOfWeek}"
             android:textSize="8dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@id/day"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            tools:text="31" />
+            tools:text="31"
+            tools:ignore="SpUsage" />
 
         <TextView
             android:id="@+id/day"
