--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -8,14 +8,14 @@
         android:id="@+id/mainFragment"
         android:name="jp.pongi.calendar.ui.main.MainFragment"
         android:label="fragment_main"
-        tools:layout="@layout/fragment_main" >
+        tools:layout="@layout/fragment_main">
         <action
             android:id="@+id/action_main_to_edit_event"
             app:destination="@id/editEventFragment"
             app:enterAnim="@anim/slide_from_bottom"
             app:exitAnim="@anim/slide_to_top"
             app:popEnterAnim="@anim/slide_from_top"
-            app:popExitAnim="@anim/slide_to_bottom"/>
+            app:popExitAnim="@anim/slide_to_bottom" />
     </fragment>
     <fragment
         android:id="@+id/editEventFragment"
@@ -23,8 +23,13 @@
         android:label="fragment_edit_event"
         tools:layout="@layout/fragment_edit_event">
         <argument
-            android:name="item"
-            app:argType="jp.pongi.calendar.model.DateItem"/>
+            android:name="dateItem"
+            app:argType="jp.pongi.calendar.model.DateItem" />
+        <argument
+            android:name="event"
+            android:defaultValue="@null"
+            app:argType="jp.pongi.calendar.room.entities.Event"
+            app:nullable="true" />
 
     </fragment>
 </navigation>
